--- a/sass/blocks/_packages.sass
+++ b/sass/blocks/_packages.sass
@@ -25,8 +25,10 @@
       width: 100%
       height: 250px
       object-fit: cover
+      flex-shrink: 0
       &--big
         height: 500px
+        flex-shrink: 1
     &__offer
       position: absolute
       left: 0
@@ -46,9 +48,11 @@
     background-color: $dark
     padding: 30px 20px 30px 32px
     color: $light
+    overflow: auto
     &--big
       max-width: 364px
       padding: 38px 20px 35px 45px
+      overflow: auto
     &__stars
       margin-bottom: 5px
     &__title
@@ -79,7 +83,7 @@
     &__pricetag
       margin-top: 24px
       &--big
-        margin-top: 37px
+        margin-top: 35px
     &__old-price
       display: block
       font-weight: normal
@@ -98,8 +102,7 @@
       font-weight: 600
       font-size: 14px
       line-height: 19px
-      width: 120px
-      min-height: 40px
+      padding: 10px 25px
       right: 21px
       bottom: 25px
       border-radius: 4px
